--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           distribution: 'temurin'
       # Gradle Caching
       - name: Gradle Caching
-        uses: actions/cache@4
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
