--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,18 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "io.sentry.jvm.gradle" version "4.6.0"
+}
+
+sentry {
+	// Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+	// This enables source context, allowing you to see your source
+	// code as part of your stack traces in Sentry.
+	includeSourceContext = true
+
+	org = System.getenv("SENTRY_ORG")
+	projectName = System.getenv("SENTRY_PROJECT_NAME")
+	authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
 
 group = 'world.geoapi'
